Fix scrollbar appearing on small width screens
Fixes #52.

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -2509,7 +2509,7 @@ a.account__display-name {
 
   @media screen and (max-width: 1550px) {
     height: auto;
-    min-height: 100%;
+    min-height: calc(100% - 10px);
     overflow-y: visible;
   }
 
